feat: add auth module